--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,20 @@
         "istream": "cpp",
         "tuple": "cpp",
         "utility": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "valarray": "cpp",
+        "*.tcc": "cpp",
+        "cmath": "cpp",
+        "ctime": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "limits": "cpp",
+        "memory": "cpp",
+        "ostream": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "system_error": "cpp"
     }
 }
