--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ if (debug)
 	# TODO: Consertar falha com CMP0037 no target do cmake
 	# set (COVERAGE_TEST ON)
 	# Define as flags de debug do compilador
-	set (CMAKE_CXX_FLAGS "-O3")
+	set (CMAKE_CXX_FLAGS "-g")
 endif()
 
 # Ativa a construção dos testes de unidade do programa
